Bug 343791 - The vanishing point of the perspective transform becomes larger instead of smaller.
Summary: The vanishing point of the perspective transform becomes larger instead of sm...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Transform (other bugs)
Version First Reported In: 2.9 Beta
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-04 21:14 UTC by wolthera
Modified: 2016-04-14 17:22 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
small (165.34 KB, image/png)
2015-02-06 15:07 UTC, wolthera
Details
large (140.85 KB, image/png)
2015-02-06 15:08 UTC, wolthera
Details

Note You need to log in before you can comment on or make changes to this bug.
Description wolthera 2015-02-04 21:14:15 UTC
If you move two points of the perspective transform close to eachother, the vanishing point dot becomes very large.
Might be intended, but I don't recall it looking like this before.
I am not sure why we scale the vanishing point dot to begin with.

Reproducible: Always
Comment 1 Halla Rempt 2015-02-06 10:09:05 UTC
Could you make a screenshot? I don't see the dot changing size except when I zoom in or out.
Comment 2 wolthera 2015-02-06 15:07:45 UTC
Created attachment 90944 [details]
small
Comment 3 wolthera 2015-02-06 15:08:26 UTC
Created attachment 90945 [details]
large

the difference is subtle but there.
Comment 4 guruguru.sp 2015-06-21 11:41:59 UTC
Still happens in 2.9.5.2. Vanishing points do change their size depending on the shape of perspective transform. By pushing the transform corner to invalid direction would show the effect clearer.
Comment 5 Halla Rempt 2016-03-19 08:56:21 UTC
Confirming then.
Comment 6 Dmitry Kazakov 2016-04-14 17:22:24 UTC
Git commit 01efc761e85b2223ee240c50ead242b97ec1f935 by Dmitry Kazakov.
Committed on 14/04/2016 at 17:20.
Pushed by dkazakov into branch 'master'.

Fix scaling of the vanishing points in the 4-point transform tool

M  +18   -9    plugins/tools/tool_transform2/kis_perspective_transform_strategy.cpp
M  +12   -3    plugins/tools/tool_transform2/kis_transform_utils.cpp
M  +1    -0    plugins/tools/tool_transform2/kis_transform_utils.h

http://commits.kde.org/krita/01efc761e85b2223ee240c50ead242b97ec1f935