Fix scaling of the vanishing points in the 4-point transform tool

BUG:343791