plugins/tools/tool_transform2/kis_perspective_transform_strategy.cpp
@@ -214,11 +214,6 @@ void KisPerspectiveTransformStrategy::paint(QPainter &gc)
     gc.restore();
 
     // Draw Handles
-    QRectF handleRect =
-        KisTransformUtils::handleRect(KisTransformUtils::handleVisualRadius,
-                                      m_d->handlesTransform,
-                                      m_d->transaction.originalRect());
-
     QPainterPath handles;
 
     handles.moveTo(m_d->transaction.originalTopLeft());
@@ -227,11 +222,20 @@ void KisPerspectiveTransformStrategy::paint(QPainter &gc)
     handles.lineTo(m_d->transaction.originalBottomLeft());
     handles.lineTo(m_d->transaction.originalTopLeft());
 
-    handles.addRect(handleRect.translated(m_d->transaction.originalTopLeft()));
-    handles.addRect(handleRect.translated(m_d->transaction.originalTopRight()));
-    handles.addRect(handleRect.translated(m_d->transaction.originalBottomLeft()));
-    handles.addRect(handleRect.translated(m_d->transaction.originalBottomRight()));
 
+    auto addHandleRectFunc =
+        [&](const QPointF &pt) {
+            handles.addRect(
+                KisTransformUtils::handleRect(KisTransformUtils::handleVisualRadius,
+                                              m_d->handlesTransform,
+                                              m_d->transaction.originalRect(), pt)
+                .translated(pt));
+    };
+
+    addHandleRectFunc(m_d->transaction.originalTopLeft());
+    addHandleRectFunc(m_d->transaction.originalTopRight());
+    addHandleRectFunc(m_d->transaction.originalBottomLeft());
+    addHandleRectFunc(m_d->transaction.originalBottomRight());
 
     gc.save();
 
@@ -263,6 +267,11 @@ void KisPerspectiveTransformStrategy::paint(QPainter &gc)
 
     { // painting perspective handles
         QPainterPath perspectiveHandles;
+
+        QRectF handleRect =
+            KisTransformUtils::handleRect(KisTransformUtils::handleVisualRadius,
+                                          QTransform(),
+                                          m_d->transaction.originalRect());
 
         if (m_d->transformedHandles.xVanishingExists) {
             QRectF rc = handleRect.translated(m_d->transformedHandles.xVanishing);
