plugins/tools/tool_transform2/kis_transform_utils.h
@@ -63,6 +63,7 @@ public:
     static qreal effectiveSize(const QRectF &rc);
 
     static QRectF handleRect(qreal radius, const QTransform &t, const QRectF &limitingSize, qreal *d = 0);
+    static QRectF handleRect(qreal radius, const QTransform &t, const QRectF &limitingRect, const QPointF &basePoint);
 
     static QPointF clipInRect(QPointF p, QRectF r);
 
